<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Source: Central Bank Myanmar</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Previous Days Rate</string>
    <string name="menu_slideshow">Rate Us</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="currency_code">
        <b>Currency Code</b>
    </string>
    <string name="myanmar_kyats">
        <b>Myanmar Kyats</b>
    </string>
    <string name="menu_latest">Latest Currency</string>
    <string name="menu_previous">Previous Days Currency</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_invite">Invite Friends</string>
    <string name="menu_update">Check Update</string>
    <string name="menu_about">About</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="app_package">com.hms.currencyexchange</string>
    <string name="check_update">Check Update</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.hms.currencyexchange
    </string>
    <string name="invite_friend_text">Hello my friend, this is Currency Exchange App,
        useful for searching and calculation from foreign currencies to Myanmar Kyats rates, please
    install and use it, thanks.\n https://play.google.com/store/apps/details?id=com.hms.currencyexchange</string>

    <string-array name="currency_arrays1">
        <item>USD</item>
        <item>EUR</item>
        <item>THB</item>
        <item>SGD</item>
        <item>JPY</item>
    </string-array>

    <string-array name="currency_arrays2">
        <item>MMK</item>
        <item>EUR</item>
        <item>THB</item>
        <item>SGD</item>
        <item>USD</item>
    </string-array>

    //Test ID
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner1_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialID">ca-app-pub-3940256099942544/1033173712</string>

    //Production ID
    <!--<string name="app_id">ca-app-pub-4401178293635594~4099861107</string>-->
    <!--<string name="banner1_id">ca-app-pub-4401178293635594/6803428959</string>-->
    <!--<string name="interstitialID">ca-app-pub-4401178293635594/1282126071</string>-->


</resources>
