<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_invite_black_24dp"
                android:title="@string/menu_invite"/>
        <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_check_update_black_24dp"
                android:title="@string/menu_update"/>

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_black_24dp"
                android:title="@string/menu_about"/>
    </group>


</menu>
